# starknet-worldcoin-bridge

./: .gitignore  .gitmodules  LICENSE  Scarb.toml  readme.md
.github/: run-docker-compose.yml
.github/scripts/: check_containers.sh
.github/workflows/: run-docker-check-messaging.yml  run-docker-compose.yml  state-bridge-messaging.yml  state-bridge-workflow.yml
integration_tests/: Dockerfile.anvil  Dockerfile.contracts  Dockerfile.katana  README.md  config.json  deploy_contracts.sh  docker-compose.yml  test_messaging.sh
integration_tests/cairo/: katana.env
integration_tests/configs/: config.json
integration_tests/scripts/: deploy_contracts.sh  test_messaging.sh
integration_tests/solidity/: .env  .gitignore  anvil.env
l1-l2-messaging/: Dockerfile.anvil  README.md  config.json  docker-compose.yml
monodock/: Dockerfile.anvil  Dockerfile.katana  Dockerfile.rust-tracing-otlp  Dockerfile.tx-sitter  README.md  docker-compose.yml
monodock/anvil-chains/: worldcoin
monodock/config/: config.json
monodock/contract-deployer-output/: report.yml
monodock/state_bridge/: Scarb.toml
monodock/state_bridge_l1/: .gitignore  anvil.env
monodock/state_bridge_service/: .gitignore  Cargo.toml
monodock/state_bridge_service/src/: abi.rs  main.rs
monodock/state_bridge_service/src/l2_listener/: mod.rs
monodock/state_bridge_service/src/state_bridge/: error.rs  mod.rs  transaction.rs
state_bridge_l1/: README.md  anvil.env  readme.md
state_bridge_l2/: Scarb.toml  katana-0.json  package-lock.json  readme.md  setup.sh
state_bridge_service/: example.env
(+122 files in other folders)
