[package]
name = "state_bridge_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
starknet = "0.10.0"
ethers = { version = "2.0.10", features = [
    "abigen",
    "ws",
    "ipc",
    "rustls",
    "openssl",
] }
eyre = "0.6.9"
tokio = { version = "1.34.0", features = ["sync", "macros"] }
tracing = "0.1.37"
ruint = "1.10.1"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.49"